# crossinfo

./: Cargo.toml  log.csv
.github/: dependabot.yml
backend/: Cargo.toml
backend/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
desktop/: Cargo.toml
desktop/src/: main.rs
linux/: Cargo.toml
linux/src/: main.rs
logo/: ._logo.afdesign  ascii_logo_20.txt  ascii_logo_40.txt  ascii_logo_80.txt  ascii_logo_mini.txt  logo.afdesign
web/: Cargo.toml
web/src/: main.rs
