[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.6.1"
pnet_datalink = "0.35.0"
reqwest = "0.12.5"
battery = { package = "starship-battery", version = "*" }
strum = "0.26.3"
strum_macros = "0.26.4"
sysinfo = "0.30.13"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread"] }
uom = "0.36.0"
wifiscanner = { git = "https://github.com/gianzellweger/wifiscanner.git", features = ["compile-anyway"] }
btleplug = "0.11.1"
display-info = "0.5.1"
ipnetwork = "0.20.0"
