[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.6.5"
pnet_datalink = "0.35.0"
reqwest = "0.12.23"
battery = { package = "starship-battery", version = "*" }
strum = "0.27.2"
strum_macros = "0.27.1"
sysinfo = "0.37.0"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread"] }
uom = "0.37.0"
wifiscanner = { git = "https://github.com/gianzellweger/wifiscanner.git", features = ["compile-anyway"] }
btleplug = "0.11.1"
display-info = "0.5.6"
ipnetwork = "0.21.1"
