[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "*", features = ["all-widgets"] }
backend = { path = "../backend" }
humansize = "2.1.3"
itertools = "0.12.1"
tokio = { version = "1.37.0", features = ["full"] }
sysinfo = "0.30.12"
