[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.29.0"
ratatui = { version = "*", features = ["all-widgets"] }
backend = { path = "../backend" }
humansize = "2.1.3"
itertools = "0.14.0"
tokio = { version = "1.43.0", features = ["full"] }
sysinfo = "0.33.1"
uom = "0.36.0"
